# zapmyco-esp32

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults.esp32s3
main/: CMakeLists.txt  bsp_board.cc  bsp_board.h  main.cc
main/assets/voices/: byebye.h  custom.h  light_off.h  light_on.h  welcome.h
main/commands/: bye_bye_command.cc  bye_bye_command.h  command_base.h  command_manager.cc  command_manager.h  light_off_command.cc  light_off_command.h  light_on_command.cc  light_on_command.h
